Gravity in walk mode hard-coded, cannot use alternate scene scale #40921

Closed
opened 2014-07-02 17:12:07 +02:00 by Sterling Roth · 11 comments

The walk navigation mode is super handy for exploring archivis scenes from a human perspective. Being able to set view height and jump height can add a lot of flexibility to the use cases for this navigation mode. However, the gravity is hard coded in meters. I have all of my scenes scaled to inches in order to accommodate a CAD ---> Blender workflow. Unfortunately, this makes my gravitation acceleration 9.8 inches per second^2, and while it is cool feeling like a spaceman, It makes it difficult to navigate scenes, especially when there are stairs involved.

Exposing the gravity settings in UI, or (better yet) using the current scenes gravity would make this a much more useable feature.

The walk navigation mode is super handy for exploring archivis scenes from a human perspective. Being able to set view height and jump height can add a lot of flexibility to the use cases for this navigation mode. However, the gravity is hard coded in meters. I have all of my scenes scaled to inches in order to accommodate a CAD ---> Blender workflow. Unfortunately, this makes my gravitation acceleration 9.8 inches per second^2, and while it is cool feeling like a spaceman, It makes it difficult to navigate scenes, especially when there are stairs involved. Exposing the gravity settings in UI, or (better yet) using the current scenes gravity would make this a much more useable feature.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Sterling Roth 2014-07-02 17:12:07 +02:00
Author

Added subscriber: @SterlingRoth

Added subscriber: @SterlingRoth
Author

Related task: https://developer.blender.org/T40925 - scene gravity hard limited

Related task: https://developer.blender.org/T40925 - scene gravity hard limited
Campbell Barton was unassigned by Bastien Montagne 2014-07-02 19:45:15 +02:00
Dalai Felinto was assigned by Bastien Montagne 2014-07-02 19:45:15 +02:00

Added subscribers: @dfelinto, @ideasman42, @mont29

Added subscribers: @dfelinto, @ideasman42, @mont29

@dfelinto should be possible to use Scene's gravity setting I guess?

@dfelinto should be possible to use Scene's gravity setting I guess?

Added subscriber: @rocketman

Added subscriber: @rocketman

I vote that the walkthrough feature go ahead and use scene gravity by default. It'd be silly to keep it hard coded, and confusing to make it distinct from existing scene settings.

I vote that the walkthrough feature go ahead and use scene gravity by default. It'd be silly to keep it hard coded, and confusing to make it distinct from existing scene settings.

This issue was referenced by 1aabbf8476

This issue was referenced by 1aabbf8476a253b49437691c041bede34d8f4227

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1aabbf8476.

Closed by commit 1aabbf8476.

This issue was referenced by a4b24a64a2aafaeff5454a282b8d522fed7cc153

This issue was referenced by a4b24a64a2aafaeff5454a282b8d522fed7cc153
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40921
No description provided.