View3D Walk: Use scene gravity instead of hardcoded value (fix T40921)

Differential Revision: https://developer.blender.org/D636